FindBugs fixes.